@@ -33,7 +33,7 @@
 .\" Title
 .\" --------------------------------------------------------------------------
 .
-.TH MPlayer 1 "2005-01-13" "The MPlayer Project" "The Movie Player"
+.TH MPlayer 1 "2005-04-03" "The MPlayer Project" "The Movie Player"
 .
 .SH NAME
 mplayer  \- movie player
@@ -276,6 +276,8 @@ Decrease/\:increase volume.
 Decrease/\:increase volume.
 .IPs m\ \ \ \ 
 Mute sound.
+.IPs "#"
+Cycle through the available audio tracks.
 .IPs f\ \ \ \ 
 Toggle fullscreen (also see \-fs).
 .IPs T\ \ \ \ 
